tests/toylang/pos/000099_cdrc2.toylang
program a = { if 0 then a = a; } .
