tests/toylang/neg/000648_mutation.toylang
program a = { a = a == var a : bool; } .
